src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Active_Permission_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Permission Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangesMadeInAssignedPersona__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check if any changes made in the persona after assigned to user</description>
        <label>ChangesMadeInAssignedPersona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Cost Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMS_UserID__c</fullName>
        <label>DMS User ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <label>Daily Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Company_Name__c</fullName>
        <formula>Contact.Account.Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_Retailer_ID__c</fullName>
        <formula>Contact.Account.DMS_Retailer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer DMS Retailer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_GC_Code__c</fullName>
        <formula>Contact.Account.Dealer_GC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer GC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ND_Code__c</fullName>
        <formula>Contact.Account.Dealer_ND_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ND Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Outlet_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Outlet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Title__c</fullName>
        <label>Dealer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Ticket_Budget__c</fullName>
        <label>Flight Ticket Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MBJ_Title__c</fullName>
        <label>MBJ Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Representative</fullName>
                </value>
                <value>
                    <fullName>Sales Executive</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Service Executive</fullName>
                </value>
                <value>
                    <fullName>Outlet Managing Director</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>New Car Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Showroom Staff</fullName>
                </value>
                <value>
                    <fullName>Product Expert</fullName>
                </value>
                <value>
                    <fullName>Used Car Manager</fullName>
                </value>
                <value>
                    <fullName>Used Car Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Service Manager</fullName>
                </value>
                <value>
                    <fullName>Service Advisor</fullName>
                </value>
                <value>
                    <fullName>Foreman</fullName>
                </value>
                <value>
                    <fullName>Mechanic</fullName>
                </value>
                <value>
                    <fullName>Parts Manager</fullName>
                </value>
                <value>
                    <fullName>Parts Clerk</fullName>
                </value>
                <value>
                    <fullName>Vehicle Management</fullName>
                </value>
                <value>
                    <fullName>Clerk/Service Operation</fullName>
                </value>
                <value>
                    <fullName>Picker/Service Operation</fullName>
                </value>
                <value>
                    <fullName>BP Mechanic</fullName>
                </value>
                <value>
                    <fullName>Operation Management(HR/Finance/Admin)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>CS Manager</fullName>
                </value>
                <value>
                    <fullName>Personal Information Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Executive</fullName>
                </value>
                <value>
                    <fullName>Quality Management Executive</fullName>
                </value>
                <value>
                    <fullName>Environtment Management Executive</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Set to JP</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Account_Contact_Update__c</fullName>
        <description>Pick-list to select the receiving settings for notification of Account&apos;s contact information update (All, Assigned, Not receive)</description>
        <label>Notification Account Contact Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Not receive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Account_Finance_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pick-list to select the receiving settings for notification of update for the Finance Contract linked Account (Only available for Finance Call Center users)</description>
        <label>Notification Account Finance Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Lead_Dealer_Assignment__c</fullName>
        <description>Store the ND codes of the outlets, for which the user has selected to receive the lead assignment notification, as the comma separated values.</description>
        <label>Notification Lead Dealer Assignment</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Lead_Merged__c</fullName>
        <label>Notification Lead Merged</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Lead_No_Update__c</fullName>
        <description>Store the ND codes of the outlets, for which the user has selected to receive the lead not updated for 1 month notification, as the comma separated values.</description>
        <label>Notification Lead No Update</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Lead_Not_Assigned__c</fullName>
        <description>Store the ND codes of the outlets, for which the user has selected to receive the lead not assigned to the person notification, as the comma separated values.</description>
        <label>Notification Lead Not Assigned</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Retail_Copy_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pick-list to select the receiving settings for notification of retail copy being created for the dealer (except when dealer user created the retail copy, through the on-liine de-dup)</description>
        <label>Notification Retail Copy Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_VR_Created__c</fullName>
        <description>Pick-list to select the receiving settings for notification of Vechile Relationship Created (All, Assigned, Not receive) (Dealer user who sold the vehicle would not receive the notification regardless of the setting)</description>
        <label>Notification VR Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Not receive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_VR_Terminated__c</fullName>
        <description>Pick-list to select the receiving settings for notification of Vechile Relationship Created (All, Assigned, Not receive) (Dealer user who sold the vehicle would not receive the notification regardless of the setting)</description>
        <label>Notification VR Terminated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Not receive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Persona_Assigned__c</fullName>
        <label>Persona Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>$UserRole.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Pick-list to represent user&apos;s type (MBJ, MBF, External System, Dealer)</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MBJ</fullName>
                </value>
                <value>
                    <fullName>MBF</fullName>
                </value>
                <value>
                    <fullName>External System</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>allowance__c</fullName>
        <description>allowance</description>
        <formula>CASE(
    CompanyName,  
    &quot;Bp&quot;, 500,
    &quot;SFDC&quot;,    Daily_Rate__c  * 0.15,
    &quot;NTT DATA EMEA&quot;,  937.13,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>@deprecated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveBPUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@ibreakingpoint.com</value>
        </filters>
        <label>Active BP Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveDaimlerUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@daimler.com</value>
        </filters>
        <label>Active Daimler Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveNTTUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@nttdata.com</value>
        </filters>
        <label>Active NTT Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveSFDCUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active SFDC Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveTestUserUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LANGUAGE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>E-CSR</value>
        </filters>
        <label>Active Test User Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_CRM_Factory_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@crm</value>
        </filters>
        <label>Active CRM Factory Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Dealer_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Dealer</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Dealer Portal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P,C,c</value>
        </filters>
        <label>Active Portal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Portal_Users_CCC_Retail</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P,C,c</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>MBK</value>
        </filters>
        <label>Active Portal Users_CCC Retail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_SFDC_Users_MBK</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>daimler</value>
        </filters>
        <label>Active SFDC Users_MBK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MARKETING_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Marketing Users</label>
    </listViews>
    <listViews>
        <fullName>All_OB_Active_Users</fullName>
        <booleanFilter>(1 and 2 and 3) or 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>OB</value>
        </filters>
        <filters>
            <field>MARKETING_USER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>OB</value>
        </filters>
        <label>All OB Active Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>User_Creation_Restriction</fullName>
        <active>false</active>
        <description>This Validation Rule is to prevent anonymous user creation.</description>
        <errorConditionFormula>AND(ISNEW(), $Profile.Name = &apos;System Administrator&apos;,  $User.Username != &apos;avishek.roy@asia.daimler-apac.com&apos;,$User.Username != &apos;nttsupport.team@mbj.daimler-apac.com&apos;,$User.Username != &apos;	karthik.chakrapani@daimler.com&apos;,$User.Username != &apos;chakradhar.boddu@daimler.com&apos;)</errorConditionFormula>
        <errorMessage>You do not have the permission to create the Users in the system.</errorMessage>
    </validationRules>
</CustomObject>